Added HTML small Tag and created the CSS file

--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                     <div class="float-start">
                     <span class="temperature" id="temperature"></span>
                     <span class="units">
-                         °C
-                    </span>     <!-- | 
-                        <a href="#" id="fahrenheit-link">°F</a></span> -->
+                        <a href="#" id="celsius-link">°C</a> | 
+                        <a href="#" id="fahrenheit-link">°F</a>
+                    </span> 
                     </div>
                 </div>
            </div> 
@@ -115,7 +115,11 @@
             </div>
         </div>
       </div>
+      <small>
+         <a href="https://github.com/oksiklepykova/Weather-app" target="_blank">Open-source code</a>, by Oksana Klepyk
+      </small>
     </div>
+    
     <script src="src/script.js"></script>
 </body> 
 </html>
